risc0/zirgen/dsl/test/repro/extern_missing_body.zir
// RUN: not zirgen --emit=ast %s 2>&1 | FileCheck %s
// CHECK: error: Expecting return type

extern Foo() :    ;

